--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>My First HeadingM/h1>
+    <h1>My First Heading</h1>
     <p>My First Paragraph.</p>
       
     <div>
