--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
         Your browser does not support the audio tag.
       </audio>
     </div>
-      
+  
     <iframe src="https://scratch.mit.edu/projects/360299092/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
       
-  </body>
+    </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/HwL7Tg5ZY-Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <ul>
+      <li>FM Piano Classic Synthesizer</li>
+      <li>Big Kalimba Percussion Synthesizer</li>
+      <li>Subtle Forces Soundscape Synthesizer</li>
+      <li>Synth Flute Lead Synthesizer</li>
+      <li>Analog Spheres Pad Synthesizer</li>
+      <li>Slow Drift Pad Synthesizer</li>
+      <li>Calm and Storm Soundscape Synthesizer</li>
+      <li>Synth E-Bass Bass Synthesizer</li>
+      <li>Power Fifths EDM Chord Synthesizer</li>
+    </ul>
+
+  <body>
 </html>
