--- a/index.html
+++ b/index.html
@@ -19,15 +19,9 @@
     </div>
 
     <ul>
-      <li>FM Piano Classic Synthesizer</li>
-      <li>Big Kalimba Percussion Synthesizer</li>
-      <li>Subtle Forces Soundscape Synthesizer</li>
-      <li>Synth Flute Lead Synthesizer</li>
-      <li>Analog Spheres Pad Synthesizer</li>
-      <li>Slow Drift Pad Synthesizer</li>
-      <li>Calm and Storm Soundscape Synthesizer</li>
-      <li>Synth E-Bass Bass Synthesizer</li>
-      <li>Power Fifths EDM Chord Synthesizer</li>
+      <li>ES2 = Provides Classic Analog Synthesizer Waveforms and 100-Single Cycle Waveforms</li>
+      <li>Sculpture = Generates Sounds by Simulating the Physical Properties of a Vibrating String</li>
+      <li>Alchemy = Features Additive, Spectral, and Granular Synthesis and Resynthesis, Sampling, and Virtual Analog Engines</li>
     </ul>
 
   <body>
